<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="295dip"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background" >
    
    <TextView
        android:id="@+id/server_delete_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="3dip"
        android:gravity="center"
        android:text="@string/dialog_delete_server_title"
        android:textAppearance="@style/ActivityDialogTitle" />
    
    <View
        android:background="#33b5e5" 
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="4dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" />

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingTop="15dip"
	    android:paddingBottom="15dip"
	    android:paddingLeft="10dip"
	    android:paddingRight="10dip"
	    android:text="@string/dialog_delete_server_text"
	    android:textAppearance="@style/whiteTextColor" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dip"
	    android:paddingRight="0dip"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:weightSum="1" >

        <Button
            android:id="@+id/server_delete_btn_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_ok_text" />

        <Button
            android:id="@+id/server_delete_btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_cancel_text" />
    </LinearLayout>

</LinearLayout>