<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background" >
    
    <TextView
        android:id="@+id/server_connect_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="3dip"
        android:gravity="center"
        android:textAppearance="@style/ActivityDialogTitle" />
    
    <View
        android:background="#33b5e5" 
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="4dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" />

	<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/init_connection_layout"
        android:layout_marginTop="7dip"
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
        android:visibility="gone"
        >
        	
        <TextView
        	android:id="@+id/init_connection_text"
        	android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
       		android:layout_alignParentLeft="true"
       		android:gravity="center_vertical"
        	android:textColor="#ffffff"
        	android:text="@string/server_connect_init_connection_text" />
            
        <ImageView
       		android:id="@+id/init_connection_status"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_vertical"
        	android:layout_alignParentRight="true"
        	android:contentDescription="@string/serverrow_icon_in_db_description"
        	android:src="@drawable/ic_cab_done_holo_dark" 
        	android:visibility="gone" />
	</RelativeLayout>
        
    <RelativeLayout
       	xmlns:android="http://schemas.android.com/apk/res/android"
       	android:id="@+id/auth_connection_layout"
       	android:layout_width="fill_parent"
       	android:layout_height="30dip"
       	android:orientation="horizontal"
       	android:layout_marginLeft="10dip"
       	android:layout_marginRight="10dip"
       	android:gravity="center_vertical"
       	android:visibility="gone" >
        	
        <TextView
       		android:id="@+id/auth_connection_text"
       		android:layout_width="wrap_content"
       		android:layout_height="fill_parent"
       		android:layout_alignParentLeft="true"
       		android:gravity="center_vertical"
       		android:textColor="#ffffff"
       		android:text="@string/server_connect_auth_connection_text" />
           
        <ImageView
    		android:id="@+id/auth_connection_status"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_gravity="center_vertical"
       		android:layout_alignParentRight="true"
       		android:visibility="gone"
       		android:contentDescription="@string/serverrow_icon_in_db_description"
       		android:src="@drawable/ic_cab_done_holo_dark" />
	</RelativeLayout>
  
    <TextView
        android:id="@+id/connection_status_divider"
        android:layout_height="1dip"
        android:layout_width="fill_parent"
	    android:background="#d4d4d4"
	    android:layout_marginTop="8dip"
	    android:layout_marginBottom="2dip"
	    android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:visibility="gone"
	    />
    
	<ProgressBar
        	android:id="@+id/server_connect_progress_bar"
        	style="?android:attr/progressBarStyleHorizontal"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:indeterminateOnly="true"
        	android:layout_marginTop="10dip"
        	android:layout_marginBottom="8dip"
        	android:layout_marginLeft="10dip"
        	android:layout_marginRight="10dip"
       	 	android:visibility="gone" />

        <TextView
        	android:id="@+id/server_connection_status"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_marginRight="10dip"
        	android:layout_marginBottom="10dip"
        	android:layout_marginTop="10dip"
        	android:gravity="center_vertical"
			android:visibility="gone"
        	android:textColor="#ffffff" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dip"
	    android:paddingRight="0dip"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:weightSum="1" >

        <Button
            android:id="@+id/server_connect_btn_repeat"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_connect_text" />

        <Button
            android:id="@+id/server_connect_btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_cancel_text" />
    </LinearLayout>

</LinearLayout>